; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetTextExtentExPoint.c_Test_GetTextExtentExPoint.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetTextExtentExPoint.c_Test_GetTextExtentExPoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"test\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"nFit = %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [5 x i32] [i32 116, i32 101, i32 115, i32 116, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_GetTextExtentExPoint() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @SetLastError(i32 0)
  %5 = call i32 @GetDC(i32 0)
  %6 = call i32 @GetTextExtentExPointA(i32 %5, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 1000, i32* %1, i32* null, i32* %2)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @ok_int(i32 %7, i32 1)
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @ok_int(i32 %9, i32 4)
  %11 = call i32 @ok_err(i32 0)
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  %14 = call i32 @GetDC(i32 0)
  %15 = call i32 @GetTextExtentExPointA(i32 %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 1, i32* %1, i32* null, i32* %2)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ok_int(i32 %16, i32 1)
  %18 = load i32, i32* %1, align 4
  %19 = call i32 @ok_int(i32 %18, i32 0)
  %20 = call i32 @ok_err(i32 0)
  %21 = load i32, i32* %1, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = call i32 @GetDC(i32 0)
  %24 = call i32 @GetTextExtentExPointA(i32 %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 0, i32* %1, i32* null, i32* %2)
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @ok_int(i32 %25, i32 1)
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @ok_int(i32 %27, i32 0)
  %29 = call i32 @ok_err(i32 0)
  %30 = call i32 @GetDC(i32 0)
  %31 = call i32 @GetTextExtentExPointA(i32 %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 -1, i32* %1, i32* null, i32* %2)
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @ok_int(i32 %32, i32 1)
  %34 = load i32, i32* %1, align 4
  %35 = call i32 @ok_int(i32 %34, i32 4)
  %36 = call i32 @ok_err(i32 0)
  %37 = call i32 @GetDC(i32 0)
  %38 = call i32 @GetTextExtentExPointA(i32 %37, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 -2, i32* %1, i32* null, i32* %2)
  store i32 %38, i32* %3, align 4
  %39 = load i32, i32* %3, align 4
  %40 = call i32 @ok_int(i32 %39, i32 0)
  %41 = call i32 @ok_err(i32 87)
  %42 = call i32 @GetDC(i32 0)
  %43 = call i32 @GetTextExtentExPointW(i32 %42, i8* bitcast ([5 x i32]* @.str.2 to i8*), i32 4, i32 -10, i32* %1, i32* null, i32* %2)
  store i32 %43, i32* %3, align 4
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @ok_int(i32 %44, i32 1)
  %46 = call i32 @GetDC(i32 0)
  %47 = call i32 @GetTextExtentExPointA(i32 %46, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 -10, i32* %1, i32* null, i32* %2)
  store i32 %47, i32* %3, align 4
  %48 = load i32, i32* %3, align 4
  %49 = call i32 @ok_int(i32 %48, i32 0)
  ret void
}

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @GetTextExtentExPointA(i32, i8*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @ok_int(i32, i32) #1

declare dso_local i32 @ok_err(i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @GetTextExtentExPointW(i32, i8*, i32, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
